Updated a lot of files for final submission. Final project materials are in FinalProject.zip

--- a/Presentation.Rmd
+++ b/Presentation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Social Power NBA Dataset"
+title: "Social Power NBA Dataset - Presentation"
 author: "Julia Wilkins & Adrian Naranjo"
 ---
 
